--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="card">
         <img src="../img/QR-white.png" alt="JPG QR code" />
-        <h2>Improve your front-end skills by building projects</h2>
+        <h2>Improving my front-end skills by building projects</h2>
         <p>Scan the QR code to visit my portfolio and find whats possible.</p>
     </main>
 </body>
