--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Component | Frontend skills</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.png">
 </head>
 <body>
     <main class="card">
-        <img src="../img/QR-white.png" alt="JPG QR code" />
+        <img src="./img/QR-white.png" alt="JPG QR code" />
         <h2>Improving my front-end skills by building projects</h2>
         <p>Scan the QR code to visit my portfolio and find whats possible.</p>
     </main>
